--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app:
     image: nicolkill/gocloud_test_back:latest
     ports:
-      - 3000:3000
+      - 4000:4000
     volumes:
       - .:/app
     networks:
@@ -14,10 +14,10 @@ services:
       PORT: 4000
       NODE_ENV: development
 
-      AWS_ACCESS_KEY_ID: example
-      AWS_SECRET_ACCESS_KEY: example
+      AWS_ACCESS_KEY_ID: dasd
+      AWS_SECRET_ACCESS_KEY: dsasad
 
-      DYNAMODB_URL: dynamodb:8000
+      DYNAMODB_URL: http://dynamodb:8000
 
   dynamodb:
     image: amazon/dynamodb-local:latest
